<resources>
    <string name="app_name">RateMySinging</string>
    <string name="file_provider_authority" translatable="false">.fileprovider</string>
    <string name="app_subtitle">A Community Of Singers</string>
    <string name="app_share_description">Connect with other singers and get their feedback on your singing.</string>
    <string name="post_share_description">%1$s sings %2$s from RateMySinging app</string>
    <string name="app_share_banner">Earn %1$d points by sharing app.</string>
    <string name="app_update_banner">Please update the app.</string>
    <string name="app_share_title">RateMySinging - Android Play Store App</string>
    <string name="app_share_popup_title">Share this app on :</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.eriyaz.social</string>
    <string name="dynamic_link_domain2">eriyaz.app.goo.gl</string>
    <string name="dynamic_link_domain">t6kaz.app.goo.gl</string>
    <string name="app_share_email_sub">RateMySinging : Connect with other singers and get their feedback on your singing.</string>
    <string name="app_share_preview">"https://firebasestorage.googleapis.com/v0/b/eriyaz-social.appspot.com/o/images%2FApp_related%2Fpreview_app_share.png?alt=media&amp;token=dfa71a95-f5b4-4fee-81e6-e03c4400f309"</string>
    <string name="label_create_post_activity">Create post</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_following_posts">Favourite posts</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_feedback">Contact Us</string>
    <string name="title_activity_tnc">Term &amp; Conditions</string>
    <string name="title_activity_ratings_chart">Ratings Chart</string>
    <string name="title_comment_like_users">Comment Loved By</string>
    <string name="post_limit_error">1 post allowed in 2 hours, you can create next post after %1$s. You can save this recording for later.</string>
    <string name="feedback_scope_all">All feedbacks are welcome, even if you are not sure or you are yourself a beginner.</string>
    <string name="feedback_scope_expert">Only want feedbacks from good singers, if you are very sure.</string>
    <string name="feedback_short_scope_all">All feedbacks are welcome</string>
    <string name="feedback_short_scope_expert">Feedbacks from good singers only</string>
    <string name="new_like_channel_name">New Like</string>
    <string name="new_comment_channel_name">New Comment</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="hint_title">Song name</string>
    <string name="hint_description">Additional notes</string>
    <string name="attempt_label">Attempt</string>
    <string name="reward_spinner_label">Reward points</string>
    <string name="hint_feedback">Report an issue, suggest a feature, or send feedback.</string>
    <string name="hint_detailed_comment">Additional Comment.</string>
    <string name="hint_block_dialog">Tell us why you want to block this user.</string>
    <string name="message_post_was_created">Post was created</string>
    <string name="message_record_was_saved">Recording saved locally</string>
    <string name="feedback_sent">Your feedback was sent</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_save_recording">Fail to save recording</string>
    <string name="error_fail_create_detailed_feedback">Fail to save detailed feedback</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post ..</string>
    <string name="message_submit_detailed_feedback">Submitting detailed feedback ..</string>
    <string name="message_submit_comment">Submitting comment ..</string>
    <string name="message_saving">Saving ..</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 60 symbols</string>
    <string name="error_post_description_length">Max length of the description should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>
    <string name="confirm_public_post">Make this post public?</string>
    <string name="confirm_deletion_message">Delete this message?</string>
    <string name="confirm_close_play_popup">Your recording will be lost. Are you sure want to close?</string>
    <string name="rating_lost_popup">Your rating will also be removed on close and no points will be earned.\nAre you sure you want to close?</string>
    <string name="mandatory_detailed_feedback_popup">\'Voice feedback\' is mandatory for \'Ok\' or \'Not Ok\' rating.</string>
    <string name="voice_feedback_hint">Don\'t simply sing, talk.</string>
    <string name="mandatory_voice_feedback_error">Press \'mic icon\' to record</string>
    <string name="detailed_feedback_error">Press \'mic icon\' to record or enter your text comment below.</string>
    <string name="confirm_continue_payment">Get official feedback from Paarth Singh.\nWill be given in 24 hours".\nPrice: Rs %1$d.</string>
    <string name="error_fail_create_complain">Fail to create complain</string>
    <string name="error_fail_block">Fail to block user</string>
    <string name="rating_received">Your rating recieved. You earned 1 point.</string>
    <string name="earn_extra_point">Your rating recieved. You can earn 1 extra point by giving \'detailed feedback\'.</string>
    <string name="ratingInfo">Rating is closed for this post. You can still comment.</string>
    <string name="rating_removed_text">Post author removed this rating</string>
    <string name="error_request_no_post">You have not posted any song yet.</string>
    <string name="comment_text_hint">Enter your comment…</string>
    <string name="detailed_comment_text_hint">Enter your text comment…</string>
    <string name="message_text_hint">Start a new conversation…</string>
    <string name="smaller_reply_text_hint"><font size='12'>Enter your reply...</font></string>
    <string name="button_post_comment">Post comment</string>
    <string name="comment_not_ok_hint">Please give feedback on what can be improved. It is mandatory for \'Not Ok\' rating.</string>
    <string name="label_comments">Comments (%1$d):</string>
    <string name="label_ratings">Ratings (%1$d):</string>
    <string name="create_post_menu_label">Post</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_create_profile">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_confirm_password">Wrong password confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="text_login">Thank you for using our application! Please, sign in for continue your action.</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="error_google_play_services">Google Play Services error.</string>
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>
    <string name="button_login_with_phone">Login with phone</string>
    <string name="button_login_with_email">Login with RateMySinging Email Account (Old users only)</string>
    <string name="loading">Loading...</string>
    <string name="removing">Removing...</string>
    <string name="loading_record">Fetching your points...</string>
    <string name="error_general">Somthing went wrong.</string>
    <string name="error_general_post">Somthing went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="blocked_msg">This user has blocked you. You cannot %1$s him/her.</string>
    <string name="privacy_policy_login_screen">By selecting one of the Account Creation Options, you agree to Rate My Singing\'s Terms of Service and Privacy Policy </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile_menu_item">Profile</string>
    <string name="feedback_menu_item">Contact Us</string>
    <string name="admin_menu_item">Admin</string>
    <string name="reward_menu_item">Reward Feedbacker</string>
    <string name="notification_menu_item">Notification</string>
    <string name="message_notification_menu_item">Message Notifications</string>
    <string name="share_app_menu_item">Share App</string>
    <string name="point_rule_menu_item">Points Rule</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="add_complain">Complain</string>
    <string name="make_public">Make public</string>
    <string name="delete_post_menu">Delete post</string>
    <string name="share_record">Download &amp; Share</string>
    <string name="tnc_menu_item">T&amp;C</string>
    <string name="follow_post_menu_item">Add to Favourites</string>
    <string name="normalized_rating_calculation_link"><u>How Normalized Rating and percentile is calculated?</u></string>
    <string name="rating_chart_link_text"><u>Rating Chart</u></string>
    <string name="average_all_recordings_text">Average rating of all recordings in the app : <font color='#17a1d7'>10</font></string>
    <string name="send_comment_button_label">Send</string>
    <string name="get_official_feedback">Buy Official Feedback</string>
</resources>