<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="@string/profile_menu_item"
        app:showAsAction="never"
        android:icon="@drawable/ic_person"
        android:orderInCategory="1" />
    <item
        android:id="@+id/notification"
        android:title="@string/notification_menu_item"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu_notification"
        android:orderInCategory="1" />
    <item
        android:id="@+id/share_app"
        android:title="@string/share_app_menu_item"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="1" />
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback_menu_item"
        app:showAsAction="never"
        android:orderInCategory="1" />
    <item
        android:id="@+id/admin_menu_item"
        android:title="@string/admin_menu_item"
        app:showAsAction="never"
        android:visible="false"
        android:orderInCategory="1" />
    <item
        android:id="@+id/tnc_menu_item"
        android:title="@string/tnc_menu_item"
        app:showAsAction="never"
        android:orderInCategory="1" />
    <!--<item-->
        <!--android:id="@+id/point_rule"-->
        <!--android:title="@string/point_rule_menu_item"-->
        <!--app:showAsAction="never"-->
        <!--android:icon="@drawable/ic_menu_notification"-->
        <!--android:orderInCategory="1" />-->
</menu>

