<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_record_menu_item"
        android:title="@string/share_record"
        app:showAsAction="never"
        android:orderInCategory="1" />
    <item
        android:id="@+id/follow_post_menu_item"
        android:title="@string/follow_post_menu_item"
        app:showAsAction="never"
        android:orderInCategory="1" />
    <item
        android:id="@+id/official_feedback_menu_item"
        android:title="@string/get_official_feedback"
        app:showAsAction="never"
        android:orderInCategory="1" />
    <item
        android:id="@+id/complain_action"
        android:title="@string/add_complain"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:visible="false"/>
    <item
        android:id="@+id/make_public_action"
        android:title="@string/make_public"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:visible="false"/>

    <!--<item-->
        <!--android:id="@+id/edit_post_action"-->
        <!--android:title="@string/edit_post_menu"-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="2"-->
        <!--android:visible="false" />-->

    <item
        android:id="@+id/delete_post_action"
        android:title="@string/delete_post_menu"
        app:showAsAction="never"
        android:orderInCategory="2"
        android:visible="false" />

    <item
        android:id="@+id/ratings_chart_menu_item"
        android:title="Ratings Chart"
        app:showAsAction="never"
        android:orderInCategory="1" />

</menu>