<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eriyaz.social.activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg_gradient"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="475dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_screen_content_offset_center_top"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/intrinsic_padding"
            android:text="@string/app_name" />

        <TextView
            style="@style/TextAppearance.MainSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_screen_title_margin"
            android:text="@string/app_subtitle" />

        <RelativeLayout
            android:id="@+id/facebookSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/facebook_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_bt_login_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_login_with_facebook"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/googleSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@drawable/google_button_bg"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_bt_login_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_login_with_google"
                android:textColor="@drawable/login_button_text_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/phoneSignInButton"
            android:layout_width="@dimen/base_login_button_width"
            android:layout_height="@dimen/base_login_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/login_screen_button_margin"
            android:background="@color/primary_dark"
            android:elevation="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/large_intrinsic_padding"
                android:paddingRight="@dimen/large_intrinsic_padding"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_login_with_phone"
                android:textColor="@drawable/login_button_text_selector" />


        </RelativeLayout>


        <TextView
            android:id="@+id/tos_tv"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/privacy_policy_login_screen"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColorLink="@drawable/login_button_text_selector"
            android:textColor="@drawable/login_button_text_selector" />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localSignInButton"
        android:text="@string/button_login_with_email"
        android:textSize="12sp"
        android:layout_marginBottom="@dimen/large_intrinsic_padding"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="bottom"
        android:textAlignment="center" />
</FrameLayout>

