<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/normalizedRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/large_intrinsic_padding"
        android:padding="@dimen/intrinsic_padding"
        android:text="Normalized Rating : " />
    <TextView
        android:id="@+id/calculationLinkTextView"
        android:layout_marginBottom="@dimen/small_intrinsic_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalized_rating_calculation_link"
        android:textColor="?android:textColorLink"
        android:textSize="12sp"
        android:padding="@dimen/intrinsic_padding" />
    <LinearLayout android:orientation="vertical"
        android:id="@+id/calculationLayout"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/actualRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Actual Rating :"
            android:textSize="12sp"
            android:padding="@dimen/intrinsic_padding" />
            <TextView
                android:id="@+id/avgRatingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="His/her Average Rating:"
                android:textSize="12sp"
                android:padding="@dimen/intrinsic_padding" />
        <TextView
            android:id="@+id/avgAllRecordingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:padding="@dimen/intrinsic_padding"
            android:text="@string/average_all_recordings_text" />
        <TextView
            android:id="@+id/normalizedRatingCalculationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:padding="@dimen/intrinsic_padding"
            android:text="Normalized Rating : " />
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/percentileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/intrinsic_padding"
                android:textSize="12sp"
                android:text="Percentile:"
                />
            <TextView
                android:id="@+id/ratingChartLinkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_chart_link_text"
                android:textSize="12sp"
                android:padding="@dimen/intrinsic_padding"
                android:textColor="?android:textColorLink" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>