<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_file_viewer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.eriyaz.social.fragments.FileViewerFragment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:transitionName="open_mediaplayer"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_media_play_red"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/file_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="file_name"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/file_length_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textSize="12sp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginTop="7dp"/>

                <!--<TextView-->
                    <!--android:id="@+id/file_date_added_text"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="mmm dd yyyy - hh:mm a"-->
                    <!--android:textSize="12sp"-->
                    <!--android:fontFamily="sans-serif-condensed"/>-->
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/intrinsic_padding"
        android:layout_below="@+id/card_view">

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <!--<TextView-->
        <!--android:id="@+id/inputLabel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/attempt_label"-->
        <!--android:layout_below="@+id/input_layout_title"-->
        <!--style="@style/InputLabel" />-->

    <Spinner
        android:id="@+id/versionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_below="@+id/input_layout_title"
        android:entries="@array/attempt_arrays"
        android:prompt="@string/attempt_label" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/versionSpinner">

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="3"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/retryButton"
        android:text="Retry"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_marginBottom="@dimen/intrinsic_padding"
        android:layout_marginRight="@dimen/small_intrinsic_padding"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true" />


</RelativeLayout>